# zen-do

./: .copier-answers.yml  .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .rumdl.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  README.qmd  _metadata.yml  _publish.yml  _quarto.yml  _renderer.py  _variables.yml  class_index.html  function_index.html  index.html  justfile  mypy.ini  pyproject.toml  ruff.toml  status.json  z_5dd3cd98ac83b591___init___py.html  z_5dd3cd98ac83b591_cli_py.html  z_5dd3cd98ac83b591_examples_py.html  z_5dd3cd98ac83b591_get_token_py.html  z_5dd3cd98ac83b591_internals_py.html  z_5dd3cd98ac83b591_zenodo_client_py.html  z_5dd3cd98ac83b591_zenodo_get_deposit_py.html  z_5dd3cd98ac83b591_zenodo_metadata_py.html
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: add-to-project.yml  check-package.yml  dependency-review.yml  release-package.yml
_extensions/seedcase-project/seedcase-theme/: _extension.yml
docs/: LICENSE.md
docs/design/: architecture.qmd  index.qmd
docs/design/interface/: cli.qmd  index.qmd  inputs.qmd  outputs.qmd
docs/guide/: index.qmd
docs/includes/: _badges.qmd  _design-status.qmd  site-counter.html
src/zen_do/: __init__.py  cli.py  convert.py  examples.py  get_token.py  internals.py  zenodo.py  zenodo_client.py  zenodo_get_deposit.py  zenodo_metadata.py
tests/: test_cli.py  test_get_token.py  test_zenodo_client.py  test_zenodo_get_deposit.py  test_zenodo_get_record.py  test_zenodo_metadata.py
tools/: get-contributors.sh  vulture-allowlist.py
