[project]
name = "zen-do"
version = "0.1.0"
description = "Tasks to get Zenodo to do from the command line"
authors = [
  { name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  { name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
maintainers = [
  { name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  { name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
readme = "README.md"
keywords = [
  "zenodo api",
  "zenodo",
  "command-line interface",
  "continuous deployment",
  "dissemination",
  "open science",
]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = []

[project.urls]
homepage = "https://zen-do.seedcase-project.org"
repository = "https://github.com/seedcase-project/zen-do"
changelog = "https://github.com/seedcase-project/zen-do/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/zen-do/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "commitizen>=4.13.9",
  "genbadge>=1.1.3",
  "jupyter>=1.1.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "quartodoc>=0.11.1",
  "ruff>=0.15.6",
  "types-tabulate>=0.10.0.20260308",
  "typos>=1.44.0",
  "vulture>=2.15",
]
